# CorePhys

./: .clang-format  CMakeLists.txt  CorePhys.sln  README.md  build.sh  build_emscripten.sh  create_sln.bat  deploy_docs.sh
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: build.yml
CorePhys/: CorePhys.vbproj  Engine.vb  Form1.Designer.vb  Form1.resx  Form1.vb  IO.vb
CorePhys/My Project/: Application.Designer.vb  AssemblyInfo.vb  Resources.Designer.vb  Settings.Designer.vb
benchmark/: CMakeLists.txt  main.c
docs/: CMakeLists.txt  FAQ.md  character.md  collision.md  foundation.md  hello.md  loose_ends.md  migration.md  overview.md  particle_performance_refactor_todo.md  reading.md  samples.md  simulation.md
include/corephys/: base.h  collision.h  constants.h  corephys.h  id.h  math_functions.h  particle.h  types.h
samples/: CMakeLists.txt  car.cpp  car.h  donut.cpp  donut.h  doohickey.cpp  doohickey.h  draw.c  draw.h  main.cpp  sample.cpp  sample.h  sample_benchmark.cpp  sample_bodies.cpp  sample_character.cpp  sample_collision.cpp  sample_continuous.cpp  sample_determinism.cpp  sample_events.cpp  sample_geometry.cpp  sample_issues.cpp  sample_joints.cpp  sample_particles.cpp  sample_robustness.cpp  sample_shapes.cpp  sample_stacking.cpp  sample_world.cpp
shared/: CMakeLists.txt  benchmarks.c  benchmarks.h  determinism.c  determinism.h  human.c  human.h  particle_parallel_benchmarks.c  particle_parallel_benchmarks.h  particle_scenarios.c  particle_scenarios.h  random.h
src/: CMakeLists.txt  aabb.c  aabb.h  arena_allocator.c  body.c  body.h  broad_phase.h  constraint_graph.h  contact.c  contact.h  contact_solver.c  core.c  core.h  distance.c  distance_joint.c  dynamic_tree.c  geometry.c  hull.c  joint.c  joint.h  manifold.c  math_functions.c  motor_joint.c  mover.c  particle_scratch.c  particle_scratch.h  particle_sort.c  particle_sort.h  particle_system.c  particle_system.h  physics_world.c  physics_world.h  prismatic_joint.c  revolute_joint.c  sensor.c  shape.c  shape.h  solver.h  timer.c  types.c  (+2 more)
test/: CMakeLists.txt  main.c  test_collision.c  test_determinism.c  test_distance.c  test_dynamic_tree.c  test_id.c  test_math.c  test_particle.c  test_particle_helpers.c  test_particle_parallel.c  test_particle_scenarios.c  test_shape.c  test_table.c  test_world.c
